@@ -5,7 +5,9 @@ Exopy Changelog
 0.2.0 - unreleased
 ------------------
 
-Nothing yet
+- always evaluate formula even if they contain only alpha characters PR # 132
+- fix unproperly unparented child task when removing a ComplexTask PR # 132
+- identify duplicate measurements in the waiting queue PR # 130 (fvalmorra)
 
 
 0.1.0 - 15-02-2018
